data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_14.wast
;; 5. Test the resilience of `br_table` by providing negative indices for branching within a block and observe how each implementation responds to invalid array index handling.

(assert_invalid
  (module (func
    (block (result i32) 
      (i32.const 10)
      (br_table -1 -2 (i32.const 0))
    )
  ))
  "invalid branch target"
)